<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_category">

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.drinkzlyboozeserver.ui.category.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_food_list"
        android:name="com.example.drinkzlyboozeserver.ui.productlist.ProductListFragment"
        android:label="@string/menu_food_list"
        tools:layout="@layout/fragment_foodlist">
        <action android:id="@+id/clearBackStack"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_category"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/nav_order"
        android:name="com.example.drinkzlyboozeserver.ui.order.OrderFragment"
        android:label="@string/menu_order"
        tools:layout="@layout/fragment_order" >

        <action android:id="@+id/clearBackStack"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_category"
            app:popUpToInclusive="true"/>

    </fragment>

    <fragment
        android:id="@+id/nav_shipper"
        android:name="com.example.drinkzlyboozeserver.ui.shipper.ShipperFragment"
        android:label="@string/menu_shipper"
        tools:layout="@layout/fragment_shipper" >

        <action android:id="@+id/clearBackStack"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_category"
            app:popUpToInclusive="true"/>

    </fragment>

    <fragment
        android:id="@+id/nav_best_deals"
        android:name="com.example.drinkzlyboozeserver.ui.best_deals.BestDealsFragment"
        android:label="@string/menu_best_deals"
        tools:layout="@layout/best_deals_fragment" >

        <action android:id="@+id/clearBackStack"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_category"
            app:popUpToInclusive="true"/>

    </fragment>

    <fragment
        android:id="@+id/nav_most_popular"
        android:name="com.example.drinkzlyboozeserver.ui.most_popular.MostPopularFragment"
        android:label="@string/menu_most_popular"
        tools:layout="@layout/most_popular_fragment" >

        <action android:id="@+id/clearBackStack"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_category"
            app:popUpToInclusive="true"/>

    </fragment>

    <fragment
        android:id="@+id/nav_discount"
        android:name="com.example.drinkzlyboozeserver.ui.discount.DiscountFragment"
        android:label="@string/menu_discount"
        tools:layout="@layout/discount_fragment" >

        <action android:id="@+id/clearBackStack"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_category"
            app:popUpToInclusive="true"/>

    </fragment>

    <fragment
        android:id="@+id/nav_transactions"
        android:name="com.example.drinkzlyboozeserver.ui.transactions.TransactionsFragment"
        android:label="@string/menu_transactions"
        tools:layout="@layout/transactions_fragment" >

        <action android:id="@+id/clearBackStack"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_category"
            app:popUpToInclusive="true"/>

    </fragment>


</navigation>